# mental-health

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  README.md  pyproject.toml
.agents/skills/ingest/: SKILL.md
.agents/skills/lint/: SKILL.md
.agents/skills/lint/scripts/: lint.py
.agents/skills/onboarding/: SKILL.md
.agents/skills/report/: SKILL.md
.obsidian/: app.json  community-plugins.json
examples/: inbox.md  index.md  log.md  profile.md  raw.md  report.md
templates/: inbox.md  index.md  log.md  profile.md  raw.md  report.md
